added interview Telenet to Latex

--- a/Thesis/LaTeX/Appendices.tex
+++ b/Thesis/LaTeX/Appendices.tex
@@ -138,9 +138,136 @@
 	\section{Interview with Telenet}
 	\label{in:Telenet}
 	\subsection{The current state of the customer service chatbot.}
+	\subsubsection{For what purposes is the chatbot mainly used? Is it rather for \acrshort{faq}, is it also for complaints, to sell something or are there other examples for which the bot can be used?}
+	
+	I'm going to talk mainly about Telenet residential. You also have Telenet Business, they also have a chatbot. I'll just explain at a high level what they have. Telenet Business have more of a proactive chatbot that will pop up based on certain criteria. That's linked to a program, Marketo, a marketing & leads generation platform. It does certain checks when you visit the Telenet Business website and if these checks are validated, the chatbot pops up. This chatbot is very limited at the moment. So, they have their platform, so to speak. For Telenet Residential, we use a different platform. We had many chatbots available like askHugo That was for motivating new customers to buy a Hugo subscription from us. This has been closed down since two years ago. We also had others like askPlay which has also been closed down. Currently we only have two. One is the Messenger bot, but that is not really a chatbot because it is rule-base and not \acrshort{ai}-driven. So, it's not an intelligent bot, it has a flow that has to be strictly adhered to by clicking buttons. If you type something, you fall out of the flow. You do end up with an advisor who can help you further but the chatbot itself will not respond. This is because it's linked to the platform we use now, and that 'dumb' bot is mainly focused on customer service. For example, the flow of technical questions is much more extensive than the other sections. We of course hope that the customer is helped by the bot but there is still a large percentage that ends up with an agent. But that's normal in a way because the bot doesn't know everything and isn't intelligent. But it's already something to help the customer and especially for the agent himself that he already has context from the questions asked by the chatbot. Because of this, they don't have to do these checks anymore. This makes it a lot more efficient for them because they already know what it is about when the customer comes to them, and they can skip those questions. This makes the conversations shorter and more efficient.
+	There is also a subscription window. This also gets them to us, but the flow is much shorter and much more restricted. There is way less inflow and less contact. The bulk simply has a problem or a question about their subscription. So, we have not invested in that at the moment.\\
+	\break
+	We are now in a decision phase to switch to a new platform and build something decent. A real \acrshort{nlp} platform where we can build everything from automation instead of the predefined flows.
+	
+	\subsubsection{You mentioned that certain bots have been shut down. Why is that? Did they not work well or not get much response?}
+	Yes, for example for the askHugo bot, Hugo is a subscription that we offered, it was the maintenance that caused us to stop the bot. Maintenance is always a big obstacle. You have to maintain a bot and for a small team that's a lot of maintenance to maintain and improve. That bot was more intelligent, because before we used Google's Dialogflow platform. That bot was good, but the inflow was too low. So, the \acrshort{roi} was too low to keep maintaining it.
+	
+	\subsubsection{And for the future platform, how would you go about getting more response and interaction with the new bot? Are you going to apply a marketing strategy to that?}
+	Yes, we are probably going to look at the customer service-related stuff first. That's the biggest chunk of business we get. I think every company will say this, but we have a lot of cases that come in via voice, via calls and we want to help people as much as possible via chat because that cost is lower and now, we want to put a chatbot there to focus on that. The first step is to use an \acrshort{faq} bot to tackle certain matters very easily. Afterwards, we can use the chatbot to carry out other processes for the customer and so expand step by step. But first the easy things that we can take up easily.
+	
+	\subsubsection{So, if I understand correctly, for the time being the chatbot can only be used via social media platforms?}
+	For now, we only have the bot on Messenger. We do plan to do an experiment with WhatsApp soon. That we offer a less elaborate flow within the app there. In the future with our new platform, that can be via web chat, social media like WhatsApp and Messenger, Twitter and Instagram. We could also offer in-app. Then all possibilities are possible. \\
+	\break
+	"I just used the app a few days ago and there you are indeed redirected to social media." Yes, the same thing happens when you go by the website.\\
+	\break
+	Through social media, it is an auto reply that says they are busy dealing with your question. It depends on when you contact us, but in such a message it says: "We will take your message in X number of minutes." But that is more of an auto reply like when you work with email. Because of the experiment, we will extend this to a flow.
+	
+	\subsubsection{Can the chatbot be used in more languages than just Dutch?}
+	Currently it is available in Dutch, French and English.
+	
+	\subsubsection{Are you planning to add more languages?}
+	Not at the moment, but on our future platform we have asked if text translation is possible and that we can communicate in that way.
+	
+	\subsubsection{Do you have an idea of what age groups comprise the majority of users? Is it 20 or younger, between 21 and 40, between 41 and 60 or 60+?}
+	Not specifically, but the customers we now get via our social media channels are somewhat younger. Rather young people and adults up to 40. We have been offering WhatsApp for a year to a year and a half now. You first have to convince people to use WhatsApp because there are a lot of people who just call in. It also depends on what questions and what problems there are. For example, you can't send a message if you don't have internet, so it's logical that they call. When we offer it on the contact page, we want to convince them to use WhatsApp and chat and also offer them a good experience so that they come back afterwards. They are mostly up to 40 years old.
+	
+	\subsubsection{The chatbot must of course be able to answer different types of questions. Do you have an idea about what kind of questions the chatbot can answer? Yes-no questions, open questions, vague questions, ...}
+	With our current chatbot it's not possible to ask a question yourself. You have to work with the buttons offered within Messenger to let them know what you want. If they have a question, we hope they follow the flow. The biggest chunk is technical, so it's often about the Internet or TV. Internet is the biggest category. Eventually, they end up with an agent where they can provide additional information. We see that at the first step, most people stop. Either they take the step and go with the flow, or they drop out. They also drop out when they start typing. This happens mainly when they think: "those buttons, that's not for me" or when they want to tell their story right away. That's where about 25\% drop out.
+	
+	\subsubsection{Within the flow, if you then decide to abandon the buttons, but the question is a yes/no question, and you type yes instead of pressing the yes button. Does the bot understand this then?}
+	No, you really need to use the buttons. It is a very stupid bot, there is no intelligence behind it. In the future, of course, our new platform should be able to do this. The same with when you type "I have an internet problem" that it immediately redirects you to the step where we already talk about the internet instead of going through all those little steps.
+	
+	\subsubsection{So, the buttons perform some kind of slot-filling so the agent doesn't have to ask trivial questions anymore?}
+	Yes, it does. We have drawn up this flow together with the agents. We can also link tags to it, which makes it even easier for the advisor to see what it is about. They know very quickly which questions have already been asked. 
+	
 	\subsection{The benefits that the chatbot brings to Telenet.}
+	\subsubsection{What kind of services can the chatbot primarily provide? For example, being able to buy or stop a subscription, request an invoice, provide someone with their \acrfull{pin} or \acrfull{puk} code, etc.}
+	The current chatbot has added value mainly for the agent with those checks, but we have also asked customers via surveys what they thought of the bot, and they are also satisfied with it. We can also see from the numbers that customers are prepared to go through that flow. That's why I mentioned the WhatsApp experiment. If we see that the customer is not responding well to that, then we will also stop that. So, the benefits are mainly for the agent but in the future, the idea is that it will also be more beneficial for the customer themselves. They can reach us at any time (24/7), so we hope that this will help them more quickly. Now it is still often the case that an agent must come to the phone, but in the future he or she will be able to do everything. So also adjusting a subscription, setting up a new one, etc. The possibilities are much more extensive than they are now. Of course, we do have to take into account what we struggle with most now. That is mainly the customer service-related issues. We should focus on that first, because that is also to minimize the cost so that it no longer goes to an agent and that agent can also focus on more important and complex matters. A chatbot won't be able to do everything, certainly not at first, but the fact that the agent doesn't have to solve all those small, trivial matters and that the chatbot can do that ensures that they can give the service that they are good at, that they can focus on that. So, it's for the advisor engagement, cost reduction, and then for the customer where we can deliver the most value. But we're not going to set up a new subscription as the first use case.
+	
+	\subsubsection{So, at the moment, those functionalities are not really there yet, it's more about the chatbot steering the customer in the right direction and then it's further handled by an agent?}
+	At the moment, it is indeed handled by an agent and those advantages are more limited.
+	
+	\subsubsection{How much work pressure is relieved for an agent is perhaps not immediately applicable here since they end up with an agent anyway. It is perhaps more interesting to look at the impact of all the trivial questions that no longer have to be asked by the agent. How much time would this save an agent?}
+	That is more of an operational question, I am not responsible for that. It will be a few seconds per call. Suppose 10 seconds * 50 agents, this will save some time. These are not the real figures.
+	
+	\subsubsection{How long does a call take on average? I estimate something like 2 minutes.}
+	Maybe I should explain. Messenger works as a delayed channel. If you send us a message, the same via WhatsApp, you're not going to get an immediate response, it's not like live chat. Instead, the agent will pick up the message, within the hour for WhatsApp for Messenger it's more variable, when it has time. This process repeats per message. So it's not an instant conversation. We try to limit the number of back and forth by using the chatbot. That the agent doesn't have to ask all those basic questions at that time. We try to prevent that through the chatbot. That's the biggest metric we can look at. How many messages still happen after the chatbot with the customer. And that has gone down but not drastically with our current chatbot.
+	
+	\subsubsection{There has already been talk about how many \% drop out while conversing with the chatbot. Is there an overall picture about the customer's readiness to use the chatbot?}
+	That's a difficult one. We do see that around 65\% of customers complete the flow from start to finish. So that 65\% are prepared to go through the flow. Of course, it's also possible that there are people among the 65\% who think: "I'll just go through the flow quickly so that I can talk to an agent". So, I can't say at the moment how many \% that is. 65\% is a good number to see that people are willing to work with the chatbot.\\
+	We do have different flows and the percentages are different for each flow. But even for the longer flows, the drop-out rate is not too bad. I hope we can achieve the same figures with WhatsApp. It's mainly in the beginning that many people drop out, around 20 to 25\%. It also has a lot to do with their previous experience. Every company is on it now, chatbots are trend. But that also means that if the customer has had a previous experience and it didn't work, then the customer is very suspicious that chatbots don't work. I understand them, because I too am sometimes so frustrated by a chatbot, who isn’t. Now with us too, it's a pretty dumb bot but it's meant to only improve. In the hope that customers will get a better positive view.
+	
+	\subsubsection{The fact that it is between 60-65\%. Is it just due to the fact that customers are very happy with the chatbot or what do you think is the reason why this percentage is so high?}
+	We once asked this in a small customer survey to get some input from the customer. The response was that they were happy to find a solution themselves with the help of the chatbot. That they can learn and find a digital solution themselves in this way. If you make a phone call, for example, then you say 'yes, I have this problem' and you are guided on the phone as to how you can solve it. But it's nice to know how the agent solved it and how I can solve it myself next time. That was a response that I found remarkable.
+	
+	\subsubsection{Are there other ways in which you measure customer satisfaction? Is there an open feedback moment?}
+	Yes, but this is mainly done with a focus on the overall conversation. We asked a temporary extra question about satisfaction, and it was quite positive. Also, why they went through the flow. To come back to the high percentage. Customers also see it as a familiar feeling, it's a bit like the \gls{ivr}. When you call, you also have to use keys to indicate what it is about. So, it is also a way that they are familiar with the buttons. The fact that they are also addressed personally is also seen as positive. But those were the results of a temporary survey that we launched at the time the bot was launched and then launched again a year later. There was no super bad feedback, which is why we kept the bot live.
+	
+	\subsubsection{Can we assume that more than 50\% of the responses were positive?}
+	Yes, I would even say around 70\%.
+	
+	\subsubsection{There is a positive side to the chatbot, but of course also a negative side. Have you noticed more frustrations from users or more complaints with the chatbot?}
+	There was a certain period where something was not properly set up with the bot. This was a problem, because the customer was not helped. They had started the flow, but it didn't reach an agent. Okay, they had left the flow, but we still wanted to help them. There was bad feedback about this, but it has been resolved in the meantime. Some customers don't like chatbots. And for such people there is always frustration. "It doesn't work" or they have already tried the help the chatbot offers. Situations like that frustrate people, not everyone is happy about it, which I totally understand. We just hope to help the largest group of customers, who are a bit more positive. There are no big scenarios that come to mind.\\
+	\break
+	We do have to take many aspects into account if we want to switch to the new platform. Take it broadly, a bot can discriminate, be rude, etc. There are things that an agent can interpret that a bot can't feel. So, we're going to have to take that into account and be careful with that. In the future, we want to use sentiment analysis to know when the customer is angry and starts sending in caps lock or calling the bot names, then we want the bot to say, "sorry I couldn't help you, an agent is going to help you further".
+	
 	\subsection{The business value of the chatbot.}
+	\subsubsection{Do you have an idea about the increase in sales due to the use of the chatbot and whether there is any at all?}
+	I certainly don't have any hard figures, but I can say that creating the botflows was part of an entire platform that was launched. So actually, the tool itself didn't cost us that much extra because it was built into the platform. Of course, we as a team did spend time on setting up the flows. On the other hand, it did save time and efficiency for the advisor. But that's not going to be much, certainly. But it is something that allows the agents to focus on more important matters. 
+	
+	\subsubsection{So, it is mainly costs that have gone down?}
+	Towards the agents, yes.
+	
+	\subsubsection{Have you noticed that fewer agents are needed since the chatbot?}
+	No, that's too early. We don't see any drastic differences yet.
+	
+	\subsubsection{So, for the time being, it's just more efficient work?}
+	Yes, it is. In the future, hopefully we will need less agents.
+	
+	\subsubsection{You just said that the chatbot is available 24/7. What happens if I send a message outside of opening hours?}
+	During opening hours, your question will normally be answered the same day, but it will be delayed. Otherwise, it will be answered the next day. The customer does not have to send anything again, the message will be dealt with as quickly as possible.
+	For WhatsApp, we have a restriction that we have to reply within the day. That's a rule from WhatsApp so that you don't use WhatsApp as a spam channel. So, the company has to send something back to the customer within the day, otherwise the chat is lost and then the customer will have to send the question again. So, we make sure that we reply within 24 hours.\\
+	\break
+	If we do not reply within 24 hours but later, this is considered a proactive message from Telenet, and they are marked as spam. This makes it seem as if we are contacting the customer out of the blue, even though that is not the case.
+	
+	\subsubsection{Has the chatbot been introduced purely for customer service purposes or also to jump on the hype train with marketing purposes?}
+	The previous bots like AskPlay and AskHugo were a bit more marketing focused to promote and sell our product. Especially with AskHugo because it is aimed at young people and then it would be cool to solve that with a chatbot. That's why this chatbot used youngsters' language and cool words.\\
+	The current chatbot is really fully focused on customer service because that's where we see the most benefits. That could be an asset in the future. Just look at Kate from KBC, they really use it as their digital agent who can help with everything. They market with it. That could also be an option for Telenet.
+	
+	\subsubsection{Do you have an estimate of how much the chatbot costs?}
+	At the moment it's built into the platform so we're not paying that much for it. The AskHugo bot was a pay-as-you-go plan but I wasn't there at the start and can't give any figures either. Usually, it's everything around it that costs a lot. The implementation, the brainstorming, the maintenance behind it, ... \\
+	With the choice we are now making for our future \acrshort{nlp} platform, it varies. There are some that charge per session. Here it depends on how much chat inflow you have. Higher numbers mean that you pay less per chat.
+	Others work with a yearly subscription. Those are serious amounts. But the intention is that we get serious \acrshort{roi} from this, of course.\\
+	For the rest, I prefer not to share the figures.
+	
+	\subsubsection{Can you tell us something about the biggest cost items?}
+	The pay-as-you go of course, the cost of the platform. Then there is hosting and the biggest cost is for the people who help build the chatbot. You have platforms that are very low-code, where business people like me can very easily say that this flow must be made in this way. You also have platforms which are high-code and for which you still need developers to develop and set up a flow. We will probably go for a platform that provides more low-code support. For a business user, it is much easier on such platforms. Of course, you will still need developers.
+	
+	\subsubsection{Will you still need conversation designers, \acrshort{ai}-trainers, data scientists, etc.?}
+	Yes, we are a small group now. I did some conversational design at the last one, but I am not a conversation designer. I also prefer to keep the overview. For now, we already have a data scientist, a developer, a functional analyst, an architect and a product owner. This group still needs to be expanded with a conversational designer and probably a few more developers.
+	
+	\subsubsection{When looking at the costs, do you mainly spend on the staff behind the chatbot or rather on infrastructure?}
+	At the moment it is more on our team. The platform has not cost us anything. But to us it is also quite limited at the moment. In the future, I have my doubts. I can't really assess that right now. 
+	
 	\subsection{The future vision of the chatbot.}
+	\subsubsection{What are the most important points of attention for the near future? I assume this is mainly the automation process for your new platform, but are there any other specific things you want to tackle?}
+	Yes, once we have the platform, we can start with a good use case that answers most questions. Afterwards, we can extend this to sentiment analysis. In terms of organisation, we need a team, the platform setup, the launch of the first \acrfull{mvp}, the positioning of the bot, how we are going to offer the bot. Do we want to do this big or not, is there an avatar behind this? In short, the branding of the bot, the tone of voice, what it's going to look like. So many different aspects that we're going to focus on.
+	
+	\subsubsection{Are you planning to offer the chatbot proactively on the website through a chat bubble or in the app?}
+	We already have such a ‘help needed’ button on certain pages. If you click on it, you get different contact options that we can configure per page. Currently, we have the options to contact us via phone or via chats via WhatsApp and Messenger. So that would be a good option to add. But we still have to decide how we want to offer that. Maybe we'll leave out all the other options and always let the bot speak first and only offer a call or live chat afterwards if the customer isn't helped any further.
+	
+	\subsubsection{And are you planning to add more languages? There was some talk earlier about automatic translation.}
+	We have listed some use cases including that text translation. We have to see how we are going to approach this. A bit like the agile principle. For example, we did market research on the new platform that can be used for Telenet, Telenet Business and Base. Then we saw, especially with the Base customers, that they found text translation much more interesting than the customers of Telenet Residential. This is because Base focuses more on customers who do not always speak Dutch very well and then they would like to speak their own language. We will therefore tackle this use case faster for Base than for Telenet but that also depends on the priorities, effort and value we get in return.
+	
+	\subsubsection{Isn't it easier to make the chatbot multilingual by using the built-in languages of the platform itself?}
+	We are definitely going to offer Dutch, French and English. It is a lot of work to add more languages. That would be a lot of extra work. That is why I would focus on those three languages and then use the text translation to cover the other languages. Otherwise, we have to translate all the flows into other languages. 3 languages is already more than enough work. The platform offers that and can do it perfectly, but on our side to maintain and set that up is a lot of work. So if they have such a tool, we will look at that rather than building everything again in another language.
+	
+	\subsubsection{We have talked about the short term with the new platform, but what about the future where is your focus there?  I heard you mentioned voice. Are there any avenues you would like to pursue in relation to chatbots?}
+	Yes, you have the big categories like chatbots and then voice bots. There we see, as I said, there are a lot of people who call us, and if we could automate something there, that would already bring a lot of value on the business side. That would save a lot of costs. Now, in Belgium, I don't think we are ready for voice bots at all. I don't see that in the short term either, but in the long term. I also think it's better to start with chatbots first and then move on to voice bots later. Voice bots are also a little more complicated, asking questions differently so that the customer understands better and comes across better.\\
+	Then there are also many things that we can automate on the agent side. For example, we can apply text prediction there, so that when a customer starts typing, it is automatically prefilled, like in google, which gives suggestions. Those are efficiency features that we also want to deploy. So, there are also a lot of automation use cases that we see for the agent.
+	
+	\subsubsection{Just to be sure, your chatbot is currently fully rule-based without \acrshort{ai}?}
+	Yes, it is. I mentioned in the beginning that we have 2 chatbots. The one on Messenger, soon also on WhatsApp. The second one is the Google Assistant. We're going to stop that one soon as well, so I didn't go into about it, but we got some learnings from that one as well. So that's more the voice aspect but that was strongly linked to our entertainment package. The link with the \gls{dvr}, you would say to the Google Assistant, record this episode. This is then linked to your \gls{dvr}, and it would record the episode. But that was very specific with the link between the Google Assistant and the box. There were a few \acrshort{faq} questions, but they were very limited. We did not expand on that. There are other possibilities now with which it is best to make the link with the box. Instead of the Google Assistant, you can now do that via the Google Home. So that we are going to revalue that and lock it in to our future platform, then we could do that more extensively with more fulfilment and more towards voice bot.
+	
+	\subsubsection{Of course, there are different scenarios you can run in the chatbot. How do you know which scenarios to include in the chatbot. Where does this expertise come from? Is it through domain experts, data analysis, market research, etc.?}
+	We have a lot of data coming in. Before the chatbot, customers were already contacting us on Messenger. We simply determined on that basis that we have a lot of technical questions (internet, TV, etc.). Then we focused on that too. That way, we first analysed the data. With that, our technical flows are more extensive, so that we can then also capture them. For example, there is a squad that came to us with a modem swap, they want to improve certain aspects of it and they see in the bot that it is not optimal, so now we are looking together at how we can do it better, what are the right questions to ask. Everything is based on data analysis.\\
+	Of course, we also take into account the experience of our agents. That is also valuable information that they provide. We can't put everything in the chatbot, because otherwise you get a 40-step plan and that's not the intention. We try to pass that on as best we can or guide the customer to their solution.
 	
 	\section{Interview with KPN}
 	\label{in:KPN}
